<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fondo"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tb_productos"
        android:hint="@string/products"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/barcode_value"
        android:id="@+id/txt_barcode"
        android:layout_below="@id/tb_productos"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"

        android:inputType="number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_value"
        android:textColor="@color/black"
        android:id="@+id/txt_description"
        android:layout_below="@+id/txt_barcode"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColorHint="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand_value"
        android:textColor="@color/black"
        android:id="@+id/txt_brand"
        android:layout_below="@id/txt_description"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColorHint="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/cost_value"
        android:id="@+id/txt_cost"
        android:layout_below="@id/txt_brand"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:inputType="number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_cost"
        android:hint="@string/price_value"
        android:id="@+id/txt_price"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textColorHint="@color/black"
        android:inputType="number"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/stock_value"
        android:id="@+id/txt_stock"
        android:layout_below="@id/txt_price"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColorHint="@color/black"
        android:inputType="number"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Guardar"
        android:id="@+id/btn_save"
        android:layout_below="@id/txt_stock"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/button_save"
        />


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_products"

        android:gravity="center"
        android:layout_below="@id/btn_save"
        android:layout_marginTop="10dp"
        />

  </RelativeLayout>